APP-244: orchestrate R1 — wire admission pipeline at auth + FQCN fixes
Local /review R1 (2 agents) findings — all fixed in-branch.

Agent A (Trading Engine Constraint Checker) — 6 BLOCKERs (all FQCN):
- MarketDataIngressHandler.java: import ByteOrder, replace `java.nio.ByteOrder.LITTLE_ENDIAN`
- MarketDataSnapshotRequestAdmissionTest.java: import SimpleMeterRegistry, replace 2x FQCN
- MarketDataSnapshotRequestMalformedTest.java: import SimpleMeterRegistry + LongHashSet, replace 3x FQCN
- MarketDataSnapshotRequestSoftErrorTest.java: import SimpleMeterRegistry, replace 2x FQCN
- SubscriptionFilterTest.java: import SimpleMeterRegistry + LongHashSet, replace 5x FQCN
- WebSocketFrameDispatcherMaxSymbolsTest.java: import SystemNanoClock, replace 1x FQCN

Agent B (General Code Quality) — 2 MEDIUMs + 3 LOWs:
- MEDIUM F-1/F-2: MarketDataAdmissionPipeline was dead code in production — never installed on
  the per-channel dispatcher at auth, and initSnapshotTokenBucket / publishSymbolEntitlements
  were never called on the session. Fixed by plumbing SymbolEntitlementMap +
  SnapshotRequestPublisher through WebSocketLauncher → WebSocketServerMain → JwtAuthHandler,
  with the per-channel admission pipeline constructed in continueAuthOnEventLoop alongside the
  bucket + entitlement publish.
- LOW F-3: MarketDataAdmissionPipeline catastrophic-error LOG.error now uses explicit
  US_ASCII charset for the symbol decode (matches SBE Symbol wire-format convention).
- LOW F-4: SubscriptionFilterEmptyTest uses Thread.currentThread().threadId() (JDK 19+)
  instead of the deprecated getId().
- LOW F-5: SymbolEntitlementYamlLoader SnakeYAML doc already added in Commit A.

JwtAuthHandler now wires per-session metrics into the SubscriptionFilter so the entitlement-
denied counter actually increments on every denial (previously initSubscriptionFilter was the
1-arg overload that left metrics=null).

Gates: spotlessCheck ✓, test 561/561 ✓, integration-tests:test ✓, e2e ✓ "E2E PASSED".

Co-Author